# multi_agentic_research_using_langchain

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/agents/: agents.py
src/custom_logger/: issues.md  logger_config.py
src/pipeline/: pipeline.py
src/tools/: tools.py
