[project]
name = "multi-agentic-research-using-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-groq>=1.1.2",
    "langchain-openai>=0.1.0",
    "lxml>=5.0.0",
    "readability-lxml>=0.8.4.1",
    "requests>=2.31.0",
    "rich>=15.0.0",
    "streamlit>=1.0.0",
    "tavily-python>=0.3.0",
    "trafilatura>=2.0.0",
]
